--- a/Assessement1.yaml
+++ b/Assessement1.yaml
@@ -1,9 +1,53 @@
----
 - hosts: tomcatserver
   gather_facts: no
 
   tasks:
+    - name: Update apt cache
+      become: true
+      apt:
+        update_cache: yes
+
+    - name: Install Java JDK
+      become: true
+      apt:
+        name: default-jdk
+        state: present
+
+    - name: Download Tomcat tar.gz file
+      become: true
+      get_url:
+        url: "https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.75/bin/apache-tomcat-9.0.75.tar.gz"
+        dest: "/tmp/apache-tomcat-9.0.75.tar.gz"
+
+    - name: Extract Tomcat tar.gz file
+      become: true
+      unarchive:
+        src: "/tmp/apache-tomcat-9.0.75.tar.gz"
+        dest: "/opt/tomcat"
+        remote_src: yes
+
+    - name: Set CATALINA_HOME environment variable
+      lineinfile:
+        dest: "~/.bashrc"
+        line: "export CATALINA_HOME=/opt/tomcat"
+        insertafter: EOF
+
+    - name: Set PATH environment variable
+      lineinfile:
+        dest: "~/.bashrc"
+        line: "export PATH=$PATH:$CATALINA_HOME/bin"
+        insertafter: EOF
+
+    - name: Reload bashrc
+      become: true
+      shell: "source ~/.bashrc"
+
     - name: Copy WAR file to tomcatserver
+      become: true
       copy:
         src: "~/.jenkins/workspace/Assessement1/target/addressbook-2.0.war"
         dest: "/opt/tomcat/apache-tomcat-9.0.75/webapps/"
+
+    - name: Restart Tomcat
+      become: true
+      shell: "/opt/tomcat/bin/shutdown.sh && /opt/tomcat/bin/startup.sh"
